--- a/.github/workflows/webpack-publish-pages.yml
+++ b/.github/workflows/webpack-publish-pages.yml
@@ -1,13 +1,16 @@
 name: Publish webpack bundle to GitHub Pages
 
-permissions:
-  id-token: write
-  
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
